--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
       <div class="temperature"> {{ weatherData.main.temp | number: '1.0-0'}}°C</div>
       <div>
         <img src="https://www.paradisechopta.com/images/monsoon.png" alt="" className="city-icon" width="100px" height="100px">
-        <img src="https://openweathermap.org/img/w/04n.png" alt="" className="city-icon" width="100px" height="100px">
+        <!-- <img src="https://openweathermap.org/img/w/04n@2x.png" alt="" className="city-icon" width="100px" height="100px"> -->
       </div>
       <div class="info" >{{weatherData.weather[0].description}}</div>
 
